--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "replicated-lint",
   "author": "Replicated, Inc.",
-  "version": "0.13.22",
+  "version": "0.14.0",
   "engines": {
     "node": ">=4.3.2"
   },
@@ -53,6 +53,7 @@
     "gaze-run-interrupt": "^1.0.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "mocha-jenkins-reporter": "^0.4.1",
     "mocha-junit-reporter": "^1.13.0",
     "publish": "^0.6.0",
     "strip-ansi": "^4.0.0",
