--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,8 +52,9 @@ jobs:
       - deploy:
           name: publish
           command: |
-            echo -e "$NPM_USERNAME\n$NPM_PASSWORD\n$NPM_EMAIL" | npm login
-            npm run publish-if-version-changed
+            echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+            # Run publish npm module, will pull latest
+            npx publish
 
 workflows:
   version: 2
