--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "replicated-lint",
   "author": "Replicated, Inc.",
-  "version": "0.18.9",
+  "version": "0.19.0",
   "engines": {
     "node": ">=4.3.2"
   },
@@ -45,42 +45,42 @@
   },
   "bin": "bin/replicated-lint",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/js-yaml": "^3.5.31",
-    "@types/lodash": "^4.14.52",
-    "@types/node": "^7.0.0",
+    "@types/chai": "^3.5.2",
+    "@types/js-yaml": "^3.12.7",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.38",
     "chai": "^3.5.0",
-    "codeclimate-test-reporter": "^0.4.1",
-    "coveralls": "^2.13.0",
+    "codeclimate-test-reporter": "^0.5.1",
+    "coveralls": "^2.13.3",
     "gaze-run-interrupt": "^1.0.1",
     "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "mocha-jenkins-reporter": "^0.4.1",
-    "mocha-junit-reporter": "^1.13.0",
+    "mocha": "^10.0.0",
+    "mocha-jenkins-reporter": "^0.4.7",
+    "mocha-junit-reporter": "^1.23.3",
     "publish": "^0.6.0",
     "strip-ansi": "^4.0.0",
-    "tmp": "^0.0.33",
-    "ts-node": "^3.0.6",
-    "tslint": "^5.7.0",
-    "typemoq": "^1.4.1",
-    "typescript": "^2.2.2",
-    "typescript-json-schema": "^0.16.0"
+    "tmp": "^0.2.1",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.20.1",
+    "typemoq": "^1.8.0",
+    "typescript": "^4.7.2",
+    "typescript-json-schema": "^0.53.1"
   },
   "dependencies": {
     "@types/json-schema": "^6.0.1",
-    "@types/tv4": "^1.2.28",
+    "@types/tv4": "^1.2.31",
     "chalk": "^1.1.3",
-    "js-yaml": "^3.8.4",
-    "junit-report-builder": "^1.3.1",
+    "js-yaml": "^3.14.1",
+    "junit-report-builder": "^1.3.3",
     "line-column": "^1.0.2",
-    "lodash": "^4.17.5",
-    "pad": "^1.1.0",
-    "semver": "^5.3.0",
+    "lodash": "^4.17.21",
+    "pad": "^1.2.1",
+    "semver": "^5.7.1",
+    "snyk": "^1.946.0",
     "tv4": "^1.3.0",
-    "url-parse": "^1.4.3",
-    "yaml-ast-parser": "^0.0.33",
-    "yargs": "^9.0.1",
-    "snyk": "^1.108.0"
+    "url-parse": "^1.5.10",
+    "yaml-ast-parser": "^0.0.43",
+    "yargs": "^17.5.1"
   },
   "snyk": true
 }
